--- a/src/app/components/component-title/component-title.component.html
+++ b/src/app/components/component-title/component-title.component.html
@@ -1,11 +1,23 @@
-<div class="mat-typography">
-  <mat-card-header class="header">
-    <!-- <div mat-card-avatar class="example-header-image"></div> -->
-    <mat-card-title class="mat-card-title">
+<div style="margin-bottom: -17px;
+padding-top: 12px;" class="mat-card-header-text">
+  <h1 style="    margin-bottom: 7px;
+  font-size: 1.7rem;
+  text-align: center;">{{title}}</h1>F
+
+  <!-- <mat-card-header class="header"> -->
+  <!-- <div mat-card-avatar class="example-header-image"></div> -->
+  <!-- <mat-card-title class="mat-card-title">
       <h1 class="navbar-brand">{{title}}</h1>
-    </mat-card-title>
-    <!-- <mat-card-subtitle>
+    </mat-card-title> -->
+
+
+
+  <!-- <mat-card-title>
+    <h1 style="    margin-bottom: 7px;
+            font-size: 2.05rem;">{{title}}</h1>
+  </mat-card-title> -->
+  <!-- <mat-card-subtitle>
         <div class="mat-subheading-2" style="color: white;">Photographer, wanderlust and more </div>
       </mat-card-subtitle> -->
-  </mat-card-header>
+  <!-- </mat-card-header> -->
 </div>
