--- a/src/app/components/videos/videos.component.html
+++ b/src/app/components/videos/videos.component.html
@@ -9,8 +9,8 @@
 
 
 
-<div class="mat-typography" color="primary">
-    <app-component-title [title]="'Films'"></app-component-title>
+<div color="primary">
+    <app-component-title [title]="'FILMS'"></app-component-title>
     <div class="catalogue-content">
         <!-- You can now use your library component in app.component.html -->
         <i class="material-icons slick-arrow-custom slick-prev-custom" (click)="slickModal.slickPrev()">
@@ -33,9 +33,9 @@
         </i>
     </div>
     <!-- <p *ngIf="currentScreenSize === 'xs'" class="catalogue-description">{{catalogue.description_xs}}</p> -->
-    <p class="catalogue-description">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+    <!-- <p class="catalogue-description">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
         lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-        lorem ipsum dolor sit amet lorem ipsum dolor sit ametlorem ipsum dolor sit amet</p>
+        lorem ipsum dolor sit amet lorem ipsum dolor sit ametlorem ipsum dolor sit amet</p> -->
 
 </div>
 <!-- style="position: relative;
