--- a/src/app/components/gallery-modal/gallery-modal.component.html
+++ b/src/app/components/gallery-modal/gallery-modal.component.html
@@ -1,8 +1,14 @@
 <!-- <h1 mat-dialog-title>data.title</h1> -->
 <div mat-dialog-content>
-  <img src="{{data.image}}" alt="" class="img-dimensions">
+  <i style="cursor:pointer" class="material-icons slick-arrow-custom slick-prev-custom" (click)="arrowClickedEvent('prev')">
+    keyboard_arrow_left
+  </i>
+  <img src="{{image}}" alt="" class="img-dimensions">
+  <i style="cursor:pointer" class="material-icons slick-arrow-custom slick-next-custom" (click)="arrowClickedEvent('next')">
+    keyboard_arrow_right
+  </i>
 </div>
 <!-- <div mat-dialog-actions> -->
-  <!-- <button mat-button (click)="onNoClick()">No Thanks</button> -->
-  <!-- <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Close</button>
+<!-- <button mat-button (click)="onNoClick()">No Thanks</button> -->
+<!-- <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Close</button>
 </div> -->
