--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,9 +1,9 @@
-<div style="    background: linear-gradient(to bottom right, black, grey);">
+<div class="bg">
   <h2>Slideshow</h2>
   <app-upload-file [paneName]="'slideshow'"></app-upload-file>
 
-  <br/>
-  <br/>
+  <br />
+  <br />
   <h2>Bio</h2>
   <app-upload-file [paneName]="'bio'"></app-upload-file>
 
@@ -21,16 +21,16 @@
     </div>
   </div>
 
-  <br/>
-  <br/>
+  <br />
+  <br />
   <h1>Awards and published work</h1>
   <h2>Awards</h2>
   <app-upload-file [paneName]="'awards'"></app-upload-file>
   <h2>Published wordk</h2>
   <app-upload-file [paneName]="'published_work'"></app-upload-file>
 
-  <br/>
-  <br/>
+  <br />
+  <br />
   <h1>Behind the scenes</h1>
   <app-upload-file [paneName]="'bts'"></app-upload-file>
   <app-fetch-file></app-fetch-file>
