--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,125 +1,125 @@
 <!-- Footer -->
-<footer class="page-footer font-small pt-4" style="background-color: #c2185b !important;">
-
+<footer
+  class="page-footer font-small pt-4"
+  style="background-color: #000538 !important;"
+>
   <!-- Footer Links -->
-  <div class="container-fluid text-center text-md-left">
-
+  <div
+    class="container-fluid text-center text-md-left"
+    style="    height: 350px;"
+  >
     <!-- Grid row -->
     <div class="row">
-
       <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3">
-
+      <div class="col-md-3 mt-md-0 mt-3">
         <!-- Content -->
-        <h5 class="text-uppercase">Footer Content</h5>
-        <p>Here you can use rows and columns here to organize your footer content.</p>
-
+        <h5 class="text-uppercase">Studio add:</h5>
+        <p>
+          2083, Rangvarsha, Dake road, Vijayanagar Colony, Sadashiv Peth, Pune
+          411030.
+        </p>
+        <h5 class="text-uppercase">Contac info:</h5>
+        <p>phone: (+91) 9922062744</p>
+        <p>email: saeebhurkephoto@gmail.com</p>
       </div>
       <!-- Grid column -->
 
-      <hr class="clearfix w-100 d-md-none pb-3">
+      <hr class="clearfix w-100 d-md-none pb-3" />
 
       <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
+      <div class="col-md-4 mb-md-0 mb-3">
         <!-- Links -->
-        <h5 class="text-uppercase">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
+        <h5 class="text-uppercase">Contact Saee:</h5>
+        <app-email></app-email>
       </div>
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
+      <div class="col-md-5 mb-md-0 mb-3">
         <!-- Links -->
-        <h5 class="text-uppercase">Links</h5>
+        <h5 class="text-uppercase"></h5>
 
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
+        <app-map></app-map>
       </div>
       <!-- Grid column -->
-
     </div>
     <!-- Grid row -->
-
   </div>
   <!-- Footer Links -->
   <!-- Footer Elements -->
   <div class="container">
-
-    <!-- Grid row-->
+    <!-- Grid row -->
     <div class="row">
-
       <!-- Grid column -->
-      <div class="col-md-12 py-5">
+      <div class="col-md-11 py-5">
         <div class="mb-5 flex-center">
-
           <!-- Facebook -->
           <a class="fb-ic">
-            <mdb-icon icon="facebook" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
+            <mdb-icon
+              icon="facebook"
+              size="2x"
+              class="white-text mr-md-5 mr-3"
+            ></mdb-icon>
           </a>
           <!-- Twitter -->
           <a class="tw-ic">
-            <mdb-icon icon="twitter" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
+            <mdb-icon
+              icon="twitter"
+              size="2x"
+              class="white-text mr-md-5 mr-3"
+            ></mdb-icon>
           </a>
-          <!-- Google +-->
+          <!-- Google + -->
           <a class="gplus-ic">
-            <mdb-icon icon="google-plus" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
+            <mdb-icon
+              icon="google-plus"
+              size="2x"
+              class="white-text mr-md-5 mr-3"
+            ></mdb-icon>
           </a>
-          <!--Linkedin -->
+          <!-- Linkedin -->
           <a class="li-ic">
-            <mdb-icon icon="linkedin" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
+            <mdb-icon
+              icon="linkedin"
+              size="2x"
+              class="white-text mr-md-5 mr-3"
+            ></mdb-icon>
           </a>
-          <!--Instagram-->
+          <!-- Instagram -->
           <a class="ins-ic">
-            <mdb-icon icon="instagram" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
+            <mdb-icon
+              icon="instagram"
+              size="2x"
+              class="white-text mr-md-5 mr-3"
+            ></mdb-icon>
           </a>
-          <!--Pinterest-->
+          <!-- Pinterest -->
           <a class="pin-ic">
-            <mdb-icon icon="pinterest" size="2x" class="white-text mr-md-5 mr-3"></mdb-icon>
+            <mdb-icon
+              icon="pinterest"
+              size="2x"
+              class="white-text mr-md-5 mr-3"
+            ></mdb-icon>
           </a>
         </div>
       </div>
+      <div class="col-md-1 py-5">
+        <a href="#" style="    font-size: 55px;"
+          ><i class="fa fa-angle-double-up"></i
+        ></a>
+      </div>
       <!-- Grid column -->
-
     </div>
-    <!-- Grid row-->
-
+    <!-- Grid row -->
   </div>
   <!-- Footer Elements -->
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="https://mdbootstrap.com/angular/angular-tutorial/"> www.saeebhurke.com</a>
+  <div class="footer-copyright text-center py-3">
+    © 2018 Copyright:
+    <a href="https://mdbootstrap.com/angular/angular-tutorial/">
+      www.saeebhurke.com</a
+    >
   </div>
   <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
