--- a/src/app/components/gallery/gallery.component.scss
+++ b/src/app/components/gallery/gallery.component.scss
@@ -1,62 +1,28 @@
-:host ::ng-deep .buttons-container {
-  height: 28px;
-  position: relative;
-  left: 2200%;
+.gallery-container {
+  margin-top: 140px;
 }
 
-:host ::ng-deep .inside {
-  max-height: 100vh !important;
+.tab-container {
+  position: fixed;
+  text-align: center;
+  width: 100%;
+  height: 59px;
+  top: 80px;
+  background: #0a0a0a;
+  z-index: 999;
+  padding: 11px 0;
 }
 
-// :host ::ng-deep #modal-gallery-wrapper {
-//   top: -110px !important;
-// }
-
-// :host ::ng-deep .ng-overlay {
-//   top: -110px !important;
-// }
-
-:host ::ng-deep .grid {
-  margin: 4.4% !important;
+.btn-container {
+  display: inline-block;
 }
 
-:host ::ng-deep #modal-gallery-container {
-  flex-direction: unset !important;
-}
-
-:host ::ng-deep .previews-container {
-  position: absolute !important;
-  flex-direction: column !important;
-  right: 90%;
-  background: #48484899;
-  height: 90%;
-  border: 2px solid white;
-}
-
-:host ::ng-deep .preview-image {
-  margin-bottom: 0px;
-  height: 62px !important;
-  width: 140px !important;
-}
-
-:host ::ng-deep .right-arrow-preview-image {
-  transform: rotate(90deg);
-}
-
-:host ::ng-deep .left-arrow-preview-image {
-  transform: rotate(90deg);
-}
-
-:host ::ng-deep ng-masonry-grid-item {
-  -webkit-transform: none;
-  transform: none;
-  -webkit-animation: unset;
-  animation: unset;
+.btn-div {
+  float: left;
 }
 
 .tab-btn {
   text-transform: uppercase;
-  float: left;
   color: #929292;
   margin: 0px 10px;
   letter-spacing: 2px;
@@ -68,4 +34,15 @@
 
 .tab-btn:focus {
   color: #7085d2;
+}
+
+:host ::ng-deep .grid {
+  margin: 4.4% !important;
+}
+
+:host ::ng-deep ng-masonry-grid-item {
+  -webkit-transform: none;
+  transform: none;
+  -webkit-animation: unset;
+  animation: unset;
 }
