--- a/src/app/components/subcatalogue/subcatalogue.component.scss
+++ b/src/app/components/subcatalogue/subcatalogue.component.scss
@@ -49,3 +49,11 @@
   height: 312px;
   // box-shadow: 1px 1px 1px 1px grey;
 }
+
+.container {
+  cursor: pointer;
+  position: relative;
+  width: 50%;
+  padding-right: 5.5px;
+  padding-left: 5.5px;
+}
