--- a/src/app/components/component-title/component-title.component.scss
+++ b/src/app/components/component-title/component-title.component.scss
@@ -1,30 +1,12 @@
-.header {
-  margin: 0 auto;
-  display: contents !important;
-}
-
-.mat-card-title {
-  text-align: center;
-  margin-bottom: 40px !important;
-}
-
-// :host ::ng-deep .mat-card-header-text {
-//   margin: 0 0px;
-//   background: black;
-//   box-shadow: 0px 0px 19px 3px #464444;
-// }
-
-:host ::ng-deep .mat-card-header-text {
-  // margin: 0 0px;
-  // background: #00000040;
-  // box-shadow: 0px 0px 19px 3px #000000;
-
+.div-title {
+  margin-bottom: -17px;
+  padding-top: 12px;
   margin: 0 0px;
-  /* background: #00000040; */
   box-shadow: 0px -13px 1px -10px #000000;
 }
 
-.header {
-  margin: 0 auto;
-  width: 269px;
+.heading-title {
+  margin-bottom: 7px;
+  font-size: 1.7rem;
+  text-align: center;
 }
