Added email functionality and maps

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -61,6 +61,21 @@
               class="white-text mr-md-5 mr-3"
             ></mdb-icon>
           </a>
+          <!-- Instagram -->
+          <button mat-button [matMenuTriggerFor]="footerMenu">
+            <a class="ins-ic">
+              <mdb-icon
+                icon="instagram"
+                size="2x"
+                class="white-text mr-md-5 mr-3"
+              ></mdb-icon>
+            </a>
+          </button>
+          <mat-menu #footerMenu="matMenu" yPosition="above">
+            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item>Item 2</button>
+          </mat-menu>
+
           <!-- Twitter -->
           <a class="tw-ic">
             <mdb-icon
@@ -69,34 +84,10 @@
               class="white-text mr-md-5 mr-3"
             ></mdb-icon>
           </a>
-          <!-- Google + -->
-          <a class="gplus-ic">
+          <!-- Youtube -->
+          <a class="yt-ic">
             <mdb-icon
-              icon="google-plus"
-              size="2x"
-              class="white-text mr-md-5 mr-3"
-            ></mdb-icon>
-          </a>
-          <!-- Linkedin -->
-          <a class="li-ic">
-            <mdb-icon
-              icon="linkedin"
-              size="2x"
-              class="white-text mr-md-5 mr-3"
-            ></mdb-icon>
-          </a>
-          <!-- Instagram -->
-          <a class="ins-ic">
-            <mdb-icon
-              icon="instagram"
-              size="2x"
-              class="white-text mr-md-5 mr-3"
-            ></mdb-icon>
-          </a>
-          <!-- Pinterest -->
-          <a class="pin-ic">
-            <mdb-icon
-              icon="pinterest"
+              icon="youtube-play"
               size="2x"
               class="white-text mr-md-5 mr-3"
             ></mdb-icon>
