--- a/src/app/components/gallery-modal/gallery-modal.component.scss
+++ b/src/app/components/gallery-modal/gallery-modal.component.scss
@@ -13,3 +13,18 @@
   background: transparent;
   box-shadow: none;
 }
+
+.dialog-backdrop {
+  background: black;
+}
+
+.slideshow {
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.disable-slideshow {
+  pointer-events: none;
+  color: gray;
+}
