--- a/src/app/components/navbar/navbar__.component.html
+++ b/src/app/components/navbar/navbar__.component.html
@@ -1,5 +1,5 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark black ">
-    <logo><a class="navbar-brand" href="#">
+    <logo><a class="navbar-brand" [routerLink]="['/']">
             <h1 style="    margin-bottom: -6px;
             font-size: 2.05rem;
             /* margin-left: -88px; */
