--- a/src/app/components/subcatalogue/subcatalogue.component.scss
+++ b/src/app/components/subcatalogue/subcatalogue.component.scss
@@ -4,9 +4,9 @@
 }
 
 .image {
-  width: 100%;
-  height: 66.66%;
-  // height: 283px;
+  // width: 100%;
+  // height: 66.66%;
+  height: 221px;
   opacity: 1;
   transition: 0.5s ease;
   -webkit-backface-visibility: hidden;
@@ -36,24 +36,25 @@
   padding: 16px 32px;
 }
 
-.image:hover {
-  opacity: 0.6;
-}
+// .image:hover {
+//   opacity: 0.6;
+// }
 
-.image:hover .middle {
-  opacity: 0;
-}
+// .image:hover .middle {
+//   opacity: 0;
+// }
 
 .div-frame {
   // border: solid 16px white;
-  height: 312px;
+  // height: 312px;
+  height: 221px;
   // box-shadow: 1px 1px 1px 1px grey;
 }
 
 .container {
   cursor: pointer;
   position: relative;
-  width: 50%;
-  padding-right: 5.5px;
-  padding-left: 5.5px;
+  // width: 50%;
+  padding-right: 0px;
+  padding-left: 0px;
 }
